# auto-setup

./: .gitignore  README.md  ansible.cfg  deploy.yml  justfile  pyproject.toml  requirements.txt
inventory/: groups.ini  hosts.ini  jetsons.ini  laptops.ini
playbooks/: setup.yml
roles/01_linux/tasks/: main.yml
roles/02_ubuntu_laptop/tasks/: main.yml
roles/03_jetson/tasks/: main.yml
